--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
-    "nodemon": "^2.0.15",
-    "serverless-domain-manager": "^5.6.0"
+    "nodemon": "^2.0.15"
   }
 }
