fixing binary types

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "deploy": "serverless deploy",
     "lint": "eslint '*.js' --fix",
-    "watch": "nodemon handler.local.js"
+    "offline": "serverless offline",
+    "watch": "nodemon server.local.js"
   },
   "dependencies": {
     "express": "^4.17.2",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "serverless-offline": "^8.3.1"
   }
 }
