--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,9 @@ provider:
 
 functions:
   api:
-    handler: handler.handler
+    handler: server.handler
     events:
       - httpApi: '*'
+
+plugins:
+  - serverless-offline
