--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "watch": "nodemon server.local.js"
   },
   "dependencies": {
-    "express": "^4.17.2",
+    "express": "^4.18.1",
     "serverless-http": "^2.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
-    "nodemon": "^2.0.15",
-    "serverless-offline": "^8.3.1"
+    "eslint": "^8.23.1",
+    "nodemon": "^2.0.20",
+    "serverless": "^3.22.0",
+    "serverless-offline": "^8.8.1"
   }
 }
